kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: player
  labels:
    app: player
spec:
  replicas: 2
  selector:
    matchLabels:
      app: player
  template:
    metadata:
      labels:
        app: player
    spec:
      containers:
      - name: player
        image: sanketnagdive/playernew:release-4.10.0_RC12-customDev_a6910c5_3477
        ports:
        - containerPort: 3000
        resources:
          requests:
            cpu: "250m"
            memory: "512Mi"
          limits:
            cpu: "500m"
            memory: "1Gi"
