kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: player
spec:
  type: ClusterIP
  selector:
    app: player
  ports:
    - port: 3000
      targetPort: 3000
