kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: player-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: player.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: player
                port:
                  number: 3000
